feature is done

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,6 @@
 trainDataFile = ./data/test
 outputFolder = ./out/test
 trainingInterval = 100000
+beladyBoundry = 100
+maxCacheSize = 100
+features = 7
