--- a/test.properties
+++ b/test.properties
@@ -1,3 +1,3 @@
-trainDataFile = ./data/test
-outputFolder = ./out/test
+trainDataFile = ../data/test
+outputFolder = ../out/test
 trainingInterval = 100000
